# tabular

./: .gitignore  Cargo.toml  README.md  test.csv  test.tsv
docs/: COMMANDS.md  FEATURES.md  FUNCTIONS.md  KEYBINDINGS.md  PLUGINS.md  STYLES.md  plugins.md
examples/: cities.csv  malformed.csv
src/: :w  app.rs  calculator.rs  canvas.rs  clipboard.rs  command.rs  config.rs  dispatch.rs  fileio.rs  format.rs  input.rs  main.rs  mode.rs  numeric.rs  operations.rs  plugin.rs  predicate.rs  rowmanager.rs  string.rs  style.rs  table.rs  tableview.rs  transaction.rs  ui.rs  util.rs  viewstate.rs  visual.rs
src/mode/: command.rs  insert.rs  normal.rs  search.rs  test.rs  visual.rs
src/numeric/: calctype.rs  calculator.rs  format.rs  formula.rs  lexer.rs  parser.rs  predicate.rs  test.rs
src/plugin/: api.rs
src/table/: column_widths.rs  columnwidths.rs  operations.rs  rowmanager.rs  sort.rs  table.rs  tableview.rs  test.rs
src/transaction/: clipboard.rs  history.rs  test.rs  transaction.rs
src/ui/: canvas.rs  progress.rs  ui.rs
