[package]
name = "tabular"
version = "0.1.0"
edition = "2021"
description = "A lightweight, terminal-based editor for CSV files with vim-like keybindings"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
csv = "1.3"
evalexpr = "11"
regex = "1"
rand = "0.8"
tempfile = "3.24.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
arboard = "3"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
